--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:400,400i,700,700i&display=swap" rel="stylesheet">
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -27,6 +29,12 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
     </main>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
   </body>
 </html>
