--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:400,400i,700,700i&display=swap" rel="stylesheet">
 
     <!-- External JS -->
@@ -25,16 +26,19 @@
     <nav>
       <span>tweeter</span>
     </nav>
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
     </main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae suscipit quia voluptate sint expedita deserunt velit asperiores nemo, amet et? Beatae impedit aliquam voluptas nesciunt quibusdam tenetur fugit ab.</p>
+
   </body>
 </html>
