Set main tag to be 90% width of it's container, and centered it

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus nulla quos praesentium illum, sunt quaerat laborum pariatur eius sed veniam dolore deserunt et iusto quibusdam. Maxime sapiente beatae tenetur!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus nulla quos praesentium illum, sunt quaerat laborum pariatur eius sed veniam dolore deserunt et iusto quibusdam. Maxime sapiente beatae tenetur!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus nulla quos praesentium illum, sunt quaerat laborum pariatur eius sed veniam dolore deserunt et iusto quibusdam. Maxime sapiente beatae tenetur!</p>
     </main>
 
   </body>
