--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,400,400i,700,700i&display=swap" rel="stylesheet">
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -30,18 +32,46 @@
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
-      <br>
       <div>
-          <h2>Your Name</h2>
+          <h2>Duncan Mann</h2>
       </div>
   </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus nulla quos praesentium illum, sunt quaerat laborum pariatur eius sed veniam dolore deserunt et iusto quibusdam. Maxime sapiente beatae tenetur!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus nulla quos praesentium illum, sunt quaerat laborum pariatur eius sed veniam dolore deserunt et iusto quibusdam. Maxime sapiente beatae tenetur!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus nulla quos praesentium illum, sunt quaerat laborum pariatur eius sed veniam dolore deserunt et iusto quibusdam. Maxime sapiente beatae tenetur!</p>
+       <h2>Compose Tweet</h2>
+            <form action="/tweets/" method="POST">
+              <textarea name="text" placeholder="What are you humming about?" id="textArea"></textarea>
+              <div class="formInput">
+                <input type="submit" value="Tweet">
+                <span class="counter">140</span>
+              </div>
+            </form>
+        <section class="new-tweet">
+            <article class="tweet">
+              <header>
+                <img src='../images/avatars/066-Spiderman.png'>
+                <h4>Spider-Man</h4>
+              </header>
+              <p>This is a tweet.</p>
+              <footer>
+                <p>10 days ago</p>
+                <div>
+                  <img src='../images/icons/like.png'>
+                  <img src='../images/icons/repeat.png'>
+                </div>
+              </footer>
+            </article>
+        </section>
     </main>
 
   </body>
 </html>
+
+
+<!-- Add this to credit emoji's 
+<div>Icons made by 
+  <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> 
+  from 
+  <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a>
+</div> -->
