Added script to detect 'hover' event when hovering over 'tweet' class (each tweet article). The function adds a class 'shadow' to the article while hovering. The CSS class has a box-shadow attribute.

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/tweet-hover.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -53,11 +54,12 @@
                 <img src='../images/avatars/066-Spiderman.png'>
                 <h4>Spider-Man</h4>
               </header>
-              <p>This is a tweet.</p>
+              <p>Spider-Men just wanna have fun</p>
               <footer>
                 <p>10 days ago</p>
                 <div>
                   <img src='../images/icons/like.png'>
+                  <img src='../images/icons/flag.png'>
                   <img src='../images/icons/repeat.png'>
                 </div>
               </footer>
