Made a function within app.js that makes creation of tweets dynamic. Changed hover function within tweet-hover.js so that this functionality works for all rendered tweets.

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-    <script type="text/javascript" src="/scripts/tweet-hover.js"></script>
-
+    
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/tweet-hover.js"></script>
   </head>
 
   <body>
@@ -53,8 +53,9 @@
               <header>
                 <img src='../images/avatars/066-Spiderman.png'>
                 <h4>Spider-Man</h4>
+                <p class='username'>@peterparker</p>
               </header>
-              <p>Spider-Men just wanna have fun</p>
+              <p>Spider-tweet</p>
               <footer>
                 <p>10 days ago</p>
                 <div>
