Fixed z-index of navbar so it remains in front of other elements

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
               <header>
                 <img src='../images/avatars/066-Spiderman.png'>
                 <h4>Spider-Man</h4>
-                <p class='username'>@peterparker</p>
+                <p class='username'>@PeterParker</p>
               </header>
               <p>Spider-tweet</p>
               <footer>
