Added ajax function to app.js to make post request with user tweet data

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
        <h2>Compose Tweet</h2>
-            <form action="/tweets/" method="POST">
+            <form action="/tweets/" method="POST" class="tweetForm">
               <textarea name="text" placeholder="What are you humming about?" id="textArea"></textarea>
               <div class="formInput">
                 <input type="submit" value="Tweet">
@@ -57,7 +57,7 @@
               </header>
               <p>Spider-tweet</p>
               <footer>
-                <p>10 days ago</p>
+                <p>Tues, 8 Oct 2019</p>
                 <div>
                   <img src='../images/icons/like.png'>
                   <img src='../images/icons/flag.png'>
