Added fetch tweets function which makes a get request to the server, and then calls the renderTweets function to populate the page

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
               </div>
             </form>
         <section class="new-tweet">
-            <article class="tweet">
+            <!-- <article class="tweet">
               <header>
                 <img src='../images/avatars/066-Spiderman.png'>
                 <h4>Spider-Man</h4>
@@ -64,7 +64,7 @@
                   <img src='../images/icons/repeat.png'>
                 </div>
               </footer>
-            </article>
+            </article> -->
         </section>
     </main>
 
